# mock-account-service

./: Cargo.toml
migrations/: init.sql
src/: account.rs  api.rs  main.rs
