[package]
name = "mock-account-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
env_logger = "0.9.0"
log = "0.4.16"
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "sqlite", "any"] }
structopt = "0.3.26"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }
